# deedsBCV

./: CMakeLists.txt  LICENSE  Makefile  README.md  convert_and_apply_deeds_npz16.py
src/: MINDSSCbox.h  QRsolve.h  affineLTS1.h  applyBCV.cpp  applyBCVfloat.cpp  dataCostD.h  deedsBCV0.cpp  diceMulti.cpp  imageIOgzType.h  linearBCV.cpp  parseArguments.h  preprocessAbdomen.cpp  primsMST.h  regularisation.h  transformations.h
